--- a/Automated_resume_parser.ipynb
+++ b/Automated_resume_parser.ipynb
@@ -723,7 +723,7 @@
             "{'education': {'degree': 'B.Tech',\n",
             "               'field': '',\n",
             "               'university': 'Prabhakar Rayal Email: '\n",
-            "                             'prabhakarrayalarcy@gmail.com • Phone: 9027677731 '\n",
+            "                             'prabhakarrayalarcy@gmail.com • Phone: 90 xxxx xxxx '\n",
             "                             'LinkedIn: '\n",
             "                             'https://www.linkedin.com/in/prabhakar-rayal-663968259/ '\n",
             "                             '• GitHub: https://github.com/Prabhakarrayal '\n",
@@ -788,9 +788,9 @@
             " 'parsing_success': True,\n",
             " 'personal_info': {'email': 'prabhakarrayalarcy@gmail.com',\n",
             "                   'name': 'Prabhakar Rayal Email',\n",
-            "                   'phone': '9027677731'},\n",
+            "                   'phone': '90 XXXX XXXX'},\n",
             " 'raw_text': 'Prabhakar Rayal Email: prabhakarrayalarcy@gmail.com • Phone: '\n",
-            "             '9027677731 LinkedIn: '\n",
+            "             '90 XXXX XXXX LinkedIn: '\n",
             "             'https://www.linkedin.com/in/prabhakar-rayal-663968259/ • GitHub: '\n",
             "             'https://github.com/Prabhakarrayal Professional Summary Proactive '\n",
             "             'Computer Science graduate aspiring for roles as a Software '\n",
