--- a/Automated_resume_parser.ipynb
+++ b/Automated_resume_parser.ipynb
@@ -723,7 +723,7 @@
             "{'education': {'degree': 'B.Tech',\n",
             "               'field': '',\n",
             "               'university': 'Prabhakar Rayal Email: '\n",
-            "                             'prabhakarrayalarcy@gmail.com • Phone: 90 xxxx xxxx '\n",
+            "                             'prabhakarrayalarcy@gmail.com • Phone: 90 XXXX XXXX '\n",
             "                             'LinkedIn: '\n",
             "                             'https://www.linkedin.com/in/prabhakar-rayal-663968259/ '\n",
             "                             '• GitHub: https://github.com/Prabhakarrayal '\n",
